<resources>
    <string name="app_name">Login</string>
    <string name="login">LOGIN</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="the_link_to_reset_your_password_will_be_sent_to_your_registered_email">The link to reset your password will be sent to your registered email.</string>
    <string name="email">Email</string>
    <string name="continu">CONTINUE</string>
    <string name="title_activity_request_list">RequestList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="this_is_not_a_valid_email">This is not a valid email</string>
    <string name="this_email_is_not_registered_with_us">This email is not registered with us.</string>
    <string name="todo">TODO</string>
    <string name="the_link_has_been_sent_to_your_email">The link has been sent to your email.</string>
    <string name="the_generated_link_will_be_active_for_24_hours">The generated link will be active for 24 hours.</string>
    <string name="new_request">NEW REQUEST</string>
    <string name="search">Search</string>
    <string name="showing_approved_requests">Showing approved requests.</string>
    <string name="filter">FILTER</string>
    <string name="my_requests">My Requests</string>
    <string name="submitted_on">Submitted on</string>
    <string name="title_activity_requisition_form1">RequisitionForm1</string>
    <string name="title_activity_requisition_form2">RequisitionForm2</string>
    <string name="title_activity_requisition_form3">RequisitionForm3</string>
    <string name="title_activity_request_view">RequestView</string>
    <string name="title_activity_fragmrnt_request_list">FragmrntRequestList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
